--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "APP_DATABASE": ""
+        "APP_DATABASE": "Data Source=../mydatabase.db;Version=3;"
     }
 }
